--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -161,7 +161,7 @@ body {
 }
 
 td {
-	background: #192123;
+	background: #F4F2FF;
 	padding: 5px 20px
 }
 
